Name:                ponyfolder
Version:             0.1

Build-type:          Simple
Cabal-version:       >=1.6

Executable ponyfolder
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    mtl >= 2 && < 3,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.5,
    mongoDB == 1.2.*,
    happstack-server == 7.*,
    happstack-server-tls == 7.*,
    safecopy == 0.6.*,
    acid-state == 0.6.*,
    happstack-hamlet == 7.*,
    happstack-clientsession == 7.*,
    http-enumerator == 0.7.*,
    web-routes == 0.27.*,
    aeson == 0.6.*,
    clientsession

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans
